syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "models.proto";
import "statuses.proto";

package businessEntity;

// NOT IMPLEMENTED

service BusinessEntityService {
    rpc Search (BusinessEntityLookup) returns (BusinessEntityLookupResponse);
    rpc Add (BusinessEntityDataRequest) returns (BusinessEntityLookupResponse);
    rpc Remove (BusinessEntityLookup) returns (statuses.StatusResponse);
    rpc Edit (BusinessEntityDataRequest) returns (statuses.StatusResponse);
}

// Add or edit
message BusinessEntityDataRequest
{
    google.protobuf.Int32Value BusinessEntityID = 1;
	google.protobuf.Int32Value BusinessEntityTypeID = 2;
}

message BusinessEntityLookup
{
    google.protobuf.Int32Value BusinessEntityID = 1;
	google.protobuf.Int32Value BusinessEntityTypeID = 2;
}

// Comment
message BusinessEntityLookupResponse
{
    repeated models.BusinessEntityDto data = 1;
}